--- a/pom.xml
+++ b/pom.xml
@@ -16,7 +16,12 @@
         <dependency>
             <groupId>com.harium.keel</groupId>
             <artifactId>keel-awt</artifactId>
-            <version>1.0.0</version>
+            <version>1.1.3</version>
+        </dependency>
+        <dependency>
+            <groupId>com.harium.etyl</groupId>
+            <artifactId>etyl</artifactId>
+            <version>1.2.0</version>
         </dependency>
         <dependency>
             <groupId>com.github.sarxos</groupId>
