--- a/pom.xml
+++ b/pom.xml
@@ -15,8 +15,13 @@
     <dependencies>
         <dependency>
             <groupId>com.harium.keel</groupId>
+            <artifactId>core</artifactId>
+            <version>1.2.1</version>
+        </dependency>
+        <dependency>
+            <groupId>com.harium.keel</groupId>
             <artifactId>keel-awt</artifactId>
-            <version>1.1.3</version>
+            <version>1.2.0</version>
         </dependency>
         <dependency>
             <groupId>com.harium.etyl</groupId>
